<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.eclipse</groupId>
    <artifactId>capitulo15</artifactId>
    <version>0.1-SNAPSHOT</version>
    <packaging>war</packaging>

    <name>capitulo15</name>
    <description>
        This is a very simple Jakarta EE application generated by the official Eclipse Starter.
    </description>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.report.sourceEncoding>UTF-8</project.report.sourceEncoding>
        <maven.compiler.release>17</maven.compiler.release>
        <jakartaee-api.version>10.0.0</jakartaee-api.version>
        <payara.version>6.2024.11</payara.version>
        <compiler-plugin.version>3.11.0</compiler-plugin.version>
        <war-plugin.version>3.3.2</war-plugin.version>
        <cargo.version>1.10.7</cargo.version>
           <microprofile.version>6.1</microprofile.version>
        <microprofile-config-api.version>3.1</microprofile-config-api.version>
        <version.jmoordb-core-annotations>2.0.2</version.jmoordb-core-annotations>
        <maven-failsafe-plugin.version>3.0.0</maven-failsafe-plugin.version>
        <primefaces.version>13.0.0</primefaces.version>
         <version.jmoordbutilfaces>3.4</version.jmoordbutilfaces>
    <version.jmoordb-core-annotations>2.0.0</version.jmoordb-core-annotations>
    </properties>

    <dependencies>
        <dependency>
            <groupId>jakarta.platform</groupId>
            <artifactId>jakarta.jakartaee-api</artifactId>
            <version>${jakartaee-api.version}</version>
            <scope>provided</scope>
        </dependency>
        
        <dependency>
            <groupId>org.eclipse.microprofile</groupId>
            <artifactId>microprofile</artifactId>
            <version>${microprofile.version}</version>
            <type>pom</type>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.eclipse.microprofile.config</groupId>
            <artifactId>microprofile-config-api</artifactId>
            <version>${microprofile-config-api.version}</version>
        </dependency>
        
        
        <dependency>
            <groupId>com.github.avbravo</groupId>
            <artifactId>jmoordb-core-annotations</artifactId>
            <version>${version.jmoordb-core-annotations}</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.6.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>5.6.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.6.0</version>
            <scope>test</scope>
        </dependency>
        
        <dependency>
            <groupId>jakarta.faces</groupId>
            <artifactId>jakarta.faces-api</artifactId>
            <version>4.0.1</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.primefaces</groupId>
            <artifactId>primefaces</artifactId>
            <version>${primefaces.version}</version>
            <classifier>jakarta</classifier>        
        </dependency>
         <dependency>
            <groupId>com.github.avbravo</groupId>
            <artifactId>jmoordb-core-annotations</artifactId>
            <version>${version.jmoordb-core-annotations}</version>
        </dependency>

        <dependency>
            <groupId>com.github.avbravo</groupId>
            <artifactId>jmoordbutilfaces</artifactId>
            <version>${version.jmoordbutilfaces}</version>
        </dependency>   

    </dependencies>

    <build>
        <finalName>capitulo15</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${compiler-plugin.version}</version>
            </plugin>
            <plugin>
                <artifactId>maven-war-plugin</artifactId>
                <version>${war-plugin.version}</version>
                <configuration>
                    <failOnMissingWebXml>false</failOnMissingWebXml>
                </configuration>
            </plugin>

            <!-- Execute 'mvn clean package cargo:run' to run the application. -->
            <plugin>
                <groupId>org.codehaus.cargo</groupId>
                <artifactId>cargo-maven3-plugin</artifactId>
                <version>${cargo.version}</version>
                <configuration>
                    <container>
                        <containerId>payara</containerId>
                        <artifactInstaller>
                            <groupId>fish.payara.distributions</groupId>
                            <artifactId>payara</artifactId>
                            <version>${payara.version}</version>
                        </artifactInstaller>
                    </container>
                </configuration>
            </plugin>
            <plugin>
                <groupId>fish.payara.maven.plugins</groupId>
                <artifactId>payara-micro-maven-plugin</artifactId>
                <configuration>
                    <payaraVersion>${payara.version}</payaraVersion>
                    <deployWar>false</deployWar>
                    <commandLineOptions>
                        <option>
                            <key>--autoBindHttp</key>
                        </option>
       

                        <!-- desabilita Hazelcas -->
                        <option>
                            <key>--noHazelcast</key>
                        </option>
                        <option>
                            <key>--logo</key>
                        </option>

                        <option>
                            <key>--deploy</key>
                            <value>${project.build.directory}/${project.build.finalName}</value>
                        </option>
                    </commandLineOptions>
                    <!--
                    JDK 17+ Soluciona error con EJB
                    -->                         
                    <javaCommandLineOptions>
                        <option>
                            <key>--add-opens</key>
                            <value>java.base/java.io=ALL-UNNAMED</value>
                        </option>
                    </javaCommandLineOptions>    
                </configuration>
                <version>2.0</version>
            </plugin>
            
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>${maven-failsafe-plugin.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    
    <repositories>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>
</project>
